fix: Randoms.suffle 에러 해결